Button and counter working

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 </head>
 <body>
     <h1>jQuery Sea Creatures</h1>
+    <button id="countUpButton">Click Me!</button>
+    <p id="clickCount">0</p>
 </body>
 </html>
