--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>jQuery Sea Creatures</h1>
-    <button id="countUpButton">Click Me!</button>
-    <p id="clickCount">0</p>
+    <button id="countUpButton">Add Sea Creature!</button>
+    <span id="clickCount">0</span>
 </body>
 </html>
