added inputs and table to HTML

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
     <h1>jQuery Sea Creatures</h1>
+    <input id="creatureName" type="text">
+    <input id="creatureSize" type="text">
+    <input id="creatureType" type="text">
+    <input id="creatureSpeed" type="text"> <!-- Possibly make this a drop down, Slow, Normal, Fast -->
     <button id="countUpButton">Add Sea Creature!</button>
-    <span id="clickCount">0</span>
+    <span id="clickCount"></span>
+    <table id="creatureTable"></table>
 </body>
 </html>
